updated chat app look and feel

--- a/views/index.html
+++ b/views/index.html
@@ -8,24 +8,28 @@
 </head>
 <body>
 	<main id="app">		
-		<section class="form-container">
-			<label for="nickname">Your Nickname (optional)</label>
+		<div class="promo">
+			<span class="heading">HELLO ALL! 	Start your conversation as:</span>
 			<input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What is your nickname?">
-			
+		</div>
+		
+		<section class="messages">
+				<ul id="messages" v-for="message in messages">
+					<!-- render message components here -->
+					<newmessage :msg="message"></newmessage>					
+				</ul>
+		</section>	
+
+		<section class="form-container">
+			<!-- <input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What is your nickname?"> -->
+			<!-- <label class="nickname" id="nickname">{{nickname}}</label> -->
 			<form>
-				<label for="message">Something to say?</label>
-				<textarea v-model="message" class="message" type="text" autocomplete="off" id="textarea"></textarea>
-				<input type="submit" @click.prevent="dispatchMessage">
+				<input v-model="message" class="message" type="text" autocomplete="off" placeholder="Type your message..." id="textarea">
+				<input type="submit" value="send" @click.prevent="dispatchMessage">
 			</form>
 		</section>
 		
-		<section class="messages">
-			<ul id="messages" v-for="message in messages">
-                <!-- render message components here -->
-                <newmessage :msg="message"></newmessage>
-				
-			</ul>
-		</section>		
+		
 	</main>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="module" src="js/main_vm.js"></script>
