--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,49 +10,86 @@ body { font: 16px Helvetica, Arial; }
 main { 
 	display: flex;
 	height: 100%;
-	flex-direction: row;
+	flex-direction: column;
 }
+.promo{
+	display: flex;
+	flex-direction: row;
+	padding: 10px;	
+	background: black;
+	color: white;
+	padding-left: 30%;
+}
+.heading{
+	margin-right: 10px;
+	padding: 0.4rem; 
+	font-weight: bold;
+	font-size: 20px;
+	
+}
+#nickname{
+		border: 1px solid #bfcfd6;
+		border-radius: 4px; 
+		font-size: 0.8rem; 
+		padding: 0.4rem; 
+		border-style: solid;
+		
+}
+
 .form-container, .messages { padding: 20px; }
 .form-container { 
+	display: flex;
+	flex-direction: row;
 	flex: 1; 
 	border: 6px solid #bfcfd6;
-	background-color: #e3edf1;
+	background-color: #96999b;
 
-	label { display: block; margin-bottom: 0.5rem; }
+	label { display: flex; margin-bottom: 0.5rem; }
 }
 
 .messages { 
-	flex: 2;
+	flex: 12;
 	background-color: #eee;
 	border: 6px solid #e2e0e0; 
 }
 
-input, textarea { 
-	display: block; 
-	width: 100%;
-	border: 2px solid #bfcfd6;
-	//border-color: #bfcfd6; 
-	border-radius: 4px; 
-	font-size: 0.8rem; 
-	padding: 0.4rem; 
-	border-style: solid;
-}
 
-textarea { height: 135px; }
+
 
 
 
 form {
-	//background: #000;
-	padding: 3px;
-	margin: 12px auto;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+
+	#textarea, input[type=submit]{
+		height: 50px;
+		margin-right: 3px;
+	}
+
+	#textarea{
+		width: 90%;
+		border-radius: 10px;
+	}
+
+	input, #textarea { 
+		display: flex; 
+		flex-direction: row;
+		border: 2px solid #bfcfd6;
+		border-radius: 4px; 
+		height: auto;
+		font-size: 0.8rem; 
+		padding: 0.4rem; 
+		border-style: solid;
+	}
 
 	input[type=submit] { 
-		width: auto; 
+		width: 10%; 
 		padding: 10px; 
-		background-color: rgb(75, 200, 17);
-		margin-top: 1rem; 
+		background-color: rgb(75, 200, 17);		
 		border-radius: 8px;
+		text-align: center;
 		color: white;
 		cursor: pointer;
 		text-transform: uppercase;
