--- a/sass/modules/_message.scss
+++ b/sass/modules/_message.scss
@@ -3,7 +3,7 @@
 
     width: 45%;
     padding: 8px 12px;
-    background-color: white; 
+    background-color: rgb(235, 224, 224); 
     border-radius: 8px;
     margin-bottom: 1rem;
 
@@ -13,6 +13,6 @@
 
 .my-message {
     float: right !important;
-    background-color: #86bf9d;
+    background-color: #19da66;
     color: white;
 }
