added online users

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,7 +50,8 @@ main {
 
 .messages { 
 	flex: 10;
-	background-color: #eee;
+	color: blackl;
+	background-image: linear-gradient(to right top, #e7cedc, #e1cade, #d9c7e1, #cfc5e3, #c2c3e5, #bac6e8, #b1caea, #a9cdea, #a9d5ea, #addce9, #b4e2e8, #bde8e6);
 	border: 6px solid #e2e0e0; 
 }
 
